crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_single_upcoming.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "In 15 minutes - Team Standup",
  "tooltip": "• 11:15 - Team Standup",
  "class": "upcoming"
}
