crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_soon.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 260
expression: output
---
{
  "text": "In 3 minutes - Urgent Call",
  "tooltip": "11:03 - Urgent Call",
  "class": "soon"
}
