crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_tooltip_limit.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "In 15 minutes - Meeting 1",
  "tooltip": "• 11:15 - Meeting 1\n• 11:45 - Meeting 2\n• 12:15 - Meeting 3",
  "class": "upcoming"
}
